--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@
     object-fit: cover;
 }
 
-ul {
+.bar {
     display: flex;
     align-items: center;
     justify-content: end;
@@ -77,21 +77,30 @@ ul {
     font-size: 18px;
 }
 
-ul li:active:not(:last-child) {
+.bar li:active:not(:last-child) {
     transform: scale(1.03);
 }
 
-header ul li:first-child {
-    margin-right: auto;
-}
-
-header ul li:last-child {
+header > ul li:last-child {
     margin-left: 25px;
 }
+
+
+.open {
+    display: none;
+}
+
 
 a {
     text-decoration: none;
     color: #FDFDFD;
+}
+
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 16px;
 }
 
 .header a:hover {
@@ -111,6 +120,14 @@ button {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+}
+
+.nav {
+    display: none;
+}
+
+.nav-button {
+    display: none;
 }
 
 .home-btn {
@@ -151,7 +168,7 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    margin-bottom: 82px;
+    margin-bottom: 68px;
 }
 
 select {
@@ -192,6 +209,14 @@ input {
     padding: 14px 16px;
     width: 225px;
     transition: 0.2s;
+}
+
+#find-btn {
+    color: var(--main-color);
+    padding: 14px 16px;
+    width: 225px;
+    transition: 0.2s;
+    display: none;
 }
 
 .find-btn:hover {
