--- a/media.css
+++ b/media.css
@@ -3,6 +3,8 @@
 
     .container {
         width: 100%;
+        padding-left: 5px;
+        padding-right: 5px;
     }
 
     .header {
@@ -71,6 +73,7 @@ h1 {
     font-size: 28px;
     line-height: 42px;
     margin-top: 234px;
+    margin-right: 16px;
     }
 
     .selection {
@@ -81,4 +84,197 @@ h1 {
         display: block;
         margin-bottom: 50px;
     }
+
+    .labor {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(2, 1fr);
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
+        padding: 0px;
+        }
+        
+        .item4 { grid-area: 1 / 1 / 2 / 2; }
+        .item3 { grid-area: 2 / 1 / 3 / 2; }
+
+        .home-btn {
+            display: flex;
+            justify-self: center;
+            margin-bottom: 40px;
+        }
+
+    .item2 {
+        display: none;
+    }
+
+    .title {
+        color: #F2BE22;
+        font-family: Nurito Sans, sans-serif;
+        font-weight: 400px;
+        font-size: 18px;
+        line-height: 20px;
+        margin-top: 50px;
+    }
+    
+    h2 {
+        color: #18121E;
+        font-family: Nurito Sans, sans-serif;
+        font-weight: 600;
+        font-size: 24px;
+        line-height: 28px;
+        margin-top: 8px;
+    }
+    
+    .text {
+        font-family: Nurito Sans, sans-serif;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        color: #18121E;
+        margin: 24px 0px;
+    }
+
+    .offer {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
+        padding-top: 0px;
+        }
+
+        .div1,
+        .div2,
+        .div3,
+        .div4 {
+            display: none;
+        }
+        
+        .div5 { grid-area: 1 / 1 / 2 / 2; }
+
+        h3 {
+            font-family: Nurito Sans, sans-serif;
+            font-weight: 700;
+            font-size: 18px;
+            line-height: 20px;
+            color: #18121E;
+        }
+        
+        .text-2 {
+            font-family: Nurito Sans, sans-serif;
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 20px;
+            color: #18121E;
+            padding-right: 20px;
+        }
+         .icons {
+            width: 100%;
+            padding-bottom: 80px;
+         }
+
+         .icon {
+            margin-bottom: 32px;
+        }
+
+        .card-grid {
+            overflow: auto;
+        }
+
+        .popular:last-child {
+            padding-bottom: 10px;
+        }
+
+        #title {
+            margin-top: 0px;
+            padding-top: 50px;
+        }
+
+        .blog-parent {
+            padding-bottom: 10px;
+        }
+
+        .blog-parent > P {
+            padding-top: 50px;
+        }
+
+        .blog {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+            grid-column-gap: 10px;
+            grid-row-gap: 0px;
+            padding: 0px;
+            margin: 32px 0px;
+            }
+            
+            .box1 { grid-area: 2 / 1 / 3 / 2; }
+            .box2 { grid-area: 2 / 2 / 3 / 3; }
+            .box3 { grid-area: 2 / 3 / 3 / 4; }
+            .box4 { grid-area: 2 / 4 / 3 / 5; }
+            .box5 { grid-area: 1 / 1 / 2 / 2; }
+            .box6 { grid-area: 2 / 1 / 3 / 2; }
+            .box7 { grid-area: 1 / 2 / 2 / 3; }
+            .box8 { grid-area: 2 / 2 / 3 / 3; }
+            .box9 { grid-area: 1 / 3 / 2 / 4; }
+            .box10 { grid-area: 2 / 3 / 3 / 4; }
+            .box11 { grid-area: 1 / 4 / 2 / 5; }
+            .box12 { grid-area: 2 / 4 / 3 / 5; }
+
+    .box1,
+    .box2,
+    .box3,
+    .box4 {
+        height: 280px;
+        width: 285px;
+        background-color: white;
+        border-radius: 10px;
+    }
+
+    .box5,
+    .box7,
+    .box9,
+    .box11 {
+        padding: 0px;
+    }
+
+    .box5 img,
+    .box7 img,
+    .box9 img,
+    .box11 img {
+        width: 100%;
+        height: 285px;
+    }
+
+    .box6,
+    .box8,
+    .box10,
+    .box12 {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 16px;
+        padding: 16px;
+    }
+
+    .blog-title {
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 26px;
+    }
+
+    .parent {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: 1fr;
+        grid-column-gap: 10px;
+        grid-row-gap: 0px;
+        }
+        
+        .photo1 { grid-area: 1 / 1 / 2 / 2; }
+        .photo2 { grid-area: 1 / 2 / 2 / 3; }
+        .photo3 { grid-area: 1 / 3 / 2 / 4; }
+        .photo4 { grid-area: 1 / 4 / 2 / 5; }
+        .photo5 { grid-area: 1 / 5 / 2 / 6; }
+        .photo6 { grid-area: 1 / 6 / 2 / 7; }
 }
