--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
+    position: relative;
 }
 
 
@@ -636,6 +637,11 @@ h3 {
         .photo5 { grid-area: 1 / 4 / 2 / 5; }
         .photo6 { grid-area: 2 / 4 / 3 / 5; }
 
+        .theme {
+            position: relative;
+            display: flex;
+            justify-content: center;
+        }
 
         /*MAIL*/
 
@@ -644,10 +650,11 @@ h3 {
             width: 1180px;
             height: 196px;
             position: absolute;
-            bottom: 400px;
+            bottom: -98px;
             border-radius: 6px;
             box-shadow: 0px 5px 20px 5px rgba(0, 0, 0, 0.3);
             display: flex;
+            text-align: start;
         }
 
         .mail div {
@@ -736,13 +743,12 @@ h3 {
 
 
 .dark {
-    position: relative;
-    height: 500px;
     background-color: var(--main-color);
 }
 
 .links {
     padding-top: 178px;
+    padding-bottom: 82px;
     color: white;
     height: 263px;
 }
