--- a/media.css
+++ b/media.css
@@ -3,8 +3,6 @@
 
     .container {
         width: 100%;
-        padding-left: 5px;
-        padding-right: 5px;
     }
 
     .header {
@@ -176,9 +174,28 @@ h1 {
          .icon {
             margin-bottom: 32px;
         }
+        
+        .parent2 {
+            display: block;
+            display: grid;
+            grid-template-columns: repeat(6, 1fr);
+            grid-template-rows: 1fr;
+            grid-column-gap: 0px;
+            grid-row-gap: 0px;
+            overflow: scroll;
+            }
+            
+            .div11 {
+                width: 1180px;
+            }
+            
+            .div11 { grid-area: 1 / 1 / 2 / 7; }
+            .div22 { grid-area: 1 / 1 / 2 / 3; }
+            .div33 { grid-area: 1 / 3 / 2 / 5; }
+            .div44 { grid-area: 1 / 5 / 2 / 7; }
 
         .card-grid {
-            overflow: auto;
+            display: none;
         }
 
         .popular:last-child {
@@ -273,6 +290,10 @@ h1 {
         overflow: scroll;
         }
 
+        #mobile-btn {
+            margin-bottom: 50px;
+        }
+
         .parent div img {
             object-fit: cover;
             width: 280px;
@@ -288,14 +309,19 @@ h1 {
         .photo5 { grid-area: 1 / 5 / 2 / 6; }
         .photo6 { grid-area: 1 / 6 / 2 / 7; }
 
+
+        .impressions {
+            padding-bottom: 0px;
+        }
+
         .mail {
             height: 351px;
-            width: 358px;
+            width: 350px;
             display: flex;
             flex-direction: column;
             position: static;
             padding: 10px;
-            margin: 0px 16px;
+            margin: 0px 16px 50px;
         }
 
         .mail-div {
