--- a/media.css
+++ b/media.css
@@ -3,10 +3,15 @@
 
     .container {
         width: 100%;
+        padding: 0px;
     }
 
     .header {
         display: none;
+    }
+
+    .home {
+        padding: 6px;
     }
 
     .nav-button {
@@ -62,6 +67,7 @@
         top: 21px;
         right: 21px;
         z-index: 9;
+        margin-left: 5px;
     }
 
 h1 {
@@ -89,11 +95,14 @@ h1 {
         grid-template-rows: repeat(2, 1fr);
         grid-column-gap: 0px;
         grid-row-gap: 0px;
-        padding: 0px;
+        padding: 0px 10px;
         }
         
         .item4 { grid-area: 1 / 1 / 2 / 2; }
         .item3 { grid-area: 2 / 1 / 3 / 2; }
+        .item3 {
+            text-align: center;
+        }
 
         .home-btn {
             display: flex;
@@ -149,6 +158,9 @@ h1 {
         }
         
         .div5 { grid-area: 1 / 1 / 2 / 2; }
+        .div5 {
+            padding: 0px 10px;
+        }
 
         h3 {
             font-family: Nurito Sans, sans-serif;
@@ -315,13 +327,14 @@ h1 {
         }
 
         .mail {
-            height: 351px;
-            width: 350px;
+            height: 345px;
+            width: 345px;
             display: flex;
             flex-direction: column;
             position: static;
             padding: 10px;
-            margin: 0px 16px 50px;
+            margin: 0px 0px 50px;
+            align-self: center;
         }
 
         .mail-div {
@@ -352,6 +365,10 @@ h1 {
             width: 358px;
         }
 
+        .dark {
+            width: 100%;
+        }
+
         .links {
             padding: 0px 0px 0px 16px;
             color: white;
@@ -361,6 +378,10 @@ h1 {
         .foot-text {
             width: 358px;
             padding-bottom: 30px;
+        }
+
+        .links > div ul {
+            width: 100%;
         }
 
         .links > div div {
