--- a/media.css
+++ b/media.css
@@ -11,7 +11,7 @@
     }
 
     .home {
-        padding: 6px;
+        padding: 20px 16px 0px;
     }
 
     .nav-button {
@@ -24,6 +24,10 @@
 
     .nav-button:active {
         transform: scale(0.9);
+    }
+
+    .navbar {
+        margin-top: 0px;
     }
 
 .open {
@@ -95,13 +99,19 @@ h1 {
         grid-template-rows: repeat(2, 1fr);
         grid-column-gap: 0px;
         grid-row-gap: 0px;
-        padding: 0px 10px;
+        padding: 0px 16px;
         }
-        
+        .item1 {
+            display: none;
+        }
         .item4 { grid-area: 1 / 1 / 2 / 2; }
         .item3 { grid-area: 2 / 1 / 3 / 2; }
         .item3 {
             text-align: center;
+        }
+
+        .item3 img {
+            width: 100%;
         }
 
         .home-btn {
@@ -148,6 +158,7 @@ h1 {
         grid-column-gap: 0px;
         grid-row-gap: 0px;
         padding-top: 0px;
+        padding-bottom: 80px;
         }
 
         .div1,
@@ -159,7 +170,11 @@ h1 {
         
         .div5 { grid-area: 1 / 1 / 2 / 2; }
         .div5 {
-            padding: 0px 10px;
+            width: 100%;
+        }
+
+        #offer-btn {
+            margin-bottom: 0px;
         }
 
         h3 {
@@ -180,11 +195,28 @@ h1 {
         }
          .icons {
             width: 100%;
-            padding-bottom: 80px;
+            padding-bottom: 30px;
+         }
+
+         .icons p:nth-child(2) {
+            padding: 4px 16px 0px 0px;
+         }
+
+         .icons > .text {
+            padding: 0px 16px;
+         }
+
+         .icons > .title {
+            padding-left: 16px;
+         } 
+
+         .icons > h2 {
+            padding-left: 16px;
          }
 
          .icon {
             margin-bottom: 32px;
+            padding-left: 16px;
         }
         
         .parent2 {
@@ -205,6 +237,14 @@ h1 {
             .div22 { grid-area: 1 / 1 / 2 / 3; }
             .div33 { grid-area: 1 / 3 / 2 / 5; }
             .div44 { grid-area: 1 / 5 / 2 / 7; }
+
+            .div22 img,
+            .div33 img,
+            .div44 img {
+                width: 96%;
+                height: auto;
+                gap: 10px;
+            }
 
         .card-grid {
             display: none;
