--- a/media.css
+++ b/media.css
@@ -96,7 +96,7 @@ h1 {
     .labor {
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(2, 1fr);
+        grid-template-rows: repeat(0.8fr, 0.6fr);
         grid-column-gap: 0px;
         grid-row-gap: 0px;
         padding: 0px 16px;
@@ -110,8 +110,18 @@ h1 {
             text-align: center;
         }
 
+        #bttn {
+            margin-bottom: 0px;
+        }
+
         .item3 img {
+            margin-top: 40px;
+            margin-bottom: 50px;
             width: 100%;
+        }
+
+        .item4 {
+            display: grid;
         }
 
         .item4 > .text {
@@ -162,7 +172,7 @@ h1 {
         grid-column-gap: 0px;
         grid-row-gap: 0px;
         padding-top: 0px;
-        padding-bottom: 80px;
+        padding-bottom: 50px;
         }
 
         .div1,
@@ -198,8 +208,10 @@ h1 {
             padding-right: 20px;
         }
          .icons {
+            height: 100%;
             width: 100%;
             padding-bottom: 30px;
+            display: grid;
          }
 
          .icons p:nth-child(2) {
@@ -253,6 +265,10 @@ h1 {
             display: none;
         }
 
+        .popular {
+            display: grid;
+        }
+
         .popular:last-child {
             padding-bottom: 10px;
         }
@@ -260,6 +276,10 @@ h1 {
         #title {
             margin-top: 0px;
             padding-top: 50px;
+        }
+
+        #blog {
+            display: grid;
         }
 
         .blog-parent {
@@ -369,6 +389,11 @@ h1 {
 
         .impressions {
             padding-bottom: 0px;
+            display: grid;
+        }
+
+        .impressions > p {
+            padding-top: 50px;
         }
 
         .mail {
